# room-air-quality

./: .gitignore  Dockerfile  Makefile  README.md  client.env.example  docker-compose.yaml  makefile  pyproject.toml  server.env.example  test.py
src/raq/client/: config.py  main.py
src/raq/server/: config.py  main.py  models.py
src/room_air_quality/: config.py  main.py  models.py
